# svccat

./: .gitignore  CHANGELOG.md  Cargo.fuzz.toml  Cargo.toml  FEATURE_DESIGN_MULTI_REPO.md  LICENSE  QUICK_REFERENCE_V0.19.0.md  README.md  RELEASE_NOTES_v0.20.0.md  RELEASE_SUMMARY_V0.19.0.md  ROADMAP.md  SECURITY.md  SECURITY_ANNOUNCEMENT.md  V0.19.0_VALIDATION_CHECKLIST.md  V0.20.0_PLANNING.md  action.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: feature_request.md  security_report.md
.github/discussions/: feedback_v0_19_0.md
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  fuzzing.yml  publish.yml  svccat-pr.yml
benches/: benchmark.rs  benchmark.rs.tmp.19092.fb94a01da042  large_manifest_benchmark.rs
dev/bench/: data.js
docs/: API_STABILITY.md  FEATURE_DESIGN_MULTI_REPO.md  FUZZING.md  PERFORMANCE_OPTIMIZATIONS_PHASE1.md  RELEASE_PLAN_V1.4.0.md  SECURITY_BEST_PRACTICES.md
examples/: demo.rs
examples/sample-monorepo/: services.yaml
examples/sample-monorepo/.github/workflows/: api-gateway.yml
examples/sample-monorepo/docs/: auth-service.md
examples/sample-monorepo/services/api-gateway/: Cargo.toml
examples/sample-monorepo/services/auth-service/: Dockerfile
examples/sample-monorepo/services/frontend/: package.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_glob.rs  fuzz_manifest.rs  fuzz_url.rs
src/: audit.rs  ci.rs  cli.rs  config.rs  cost.rs  demo.rs  deps.rs  deps_graph.rs  diff.rs  discovery.rs  drift.rs  fix.rs  hooks.rs  import.rs  infer.rs  init.rs  lib.rs  lib.rs.tmp.16456.a05d3b1de77b  lint.rs  main.rs  manifest.rs  pathredaction.rs  ping.rs  policy.rs  report.rs  reporting.rs  rule_schema.rs  rules.rs  safe_http.rs  scorecard.rs  search.rs  serve.rs  since.rs  snapshot.rs  stats.rs  tag.rs  timefmt.rs  urlvalidation.rs  watch.rs  webhook.rs  (+1 more)
src/output/: backstage.rs  csv.rs  cyclonedx.rs  d3_force_graph.rs  datadog.rs  github_annotation.rs  json.rs  json_script.rs  junit.rs  markdown.rs  mermaid.rs  mod.rs  sarif.rs  slack.rs  slack.rs.tmp.19092.9f0e9f84217e  spdx.rs  teams.rs  terminal.rs  workspace.rs  workspace_html.rs
tests/: advanced_rules_integration_tests.rs  advanced_rules_tests.rs  cli_binary_tests.rs  cross_repo_dependency_tests.rs  cyclonedx_export_tests.rs  integration_test.rs  policy_rule_schema_tests.rs  redirect_ssrf_tests.rs  reporting_config_tests.rs  rule_composition_tests.rs  rules_integration_tests.rs  security_tests.rs  spdx_export_tests.rs  watch_enhancement_tests.rs  workspace_integration_tests.rs
tests/common/: mod.rs
tests/fixtures/rules/: manifest-basic.yaml
tests/fixtures/workspace/: svccat.toml
tests/fixtures/workspace/repo1/: services.yaml
tests/fixtures/workspace/repo1/services/api/: Cargo.toml
tests/fixtures/workspace/repo1/services/auth/: Cargo.toml
tests/fixtures/workspace/repo2/: services.yaml
tests/fixtures/workspace/repo2/services/admin-panel/: package.json
tests/fixtures/workspace/repo2/services/web/: package.json
