[package]
name = "svccat"
version = "0.21.0"
edition = "2021"
description = "Detect drift between your declared service catalog and what actually lives in the repo."
license = "MIT"
repository = "https://github.com/rodmen07/svccat"
keywords = ["microservices", "devops", "cli", "platform-engineering"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "svccat"
path = "src/lib.rs"

[[bin]]
name = "svccat"
path = "src/main.rs"

[dependencies]
anyhow      = "1"
clap        = { version = "4", features = ["derive"] }
clap_complete = "4"
colored     = "2"
glob        = "0.3"
notify      = "6"
regex       = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
toml        = "0.8"
ureq        = "2"
url         = "2"

[dev-dependencies]
clap_complete = "4"
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "large_manifest_benchmark"
harness = false
