[package]
name = "svccat"
version = "1.1.1"
edition = "2021"
# MSRV: driven by the heaviest dependency floor (clap 4 requires 1.85).
rust-version = "1.85"
description = "Detect drift between your declared service catalog and what actually lives in the repo."
license = "MIT"
repository = "https://github.com/rodmen07/svccat"
homepage = "https://github.com/rodmen07/svccat"
documentation = "https://docs.rs/svccat"
keywords = ["microservices", "devops", "cli", "platform-engineering"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "svccat"
path = "src/lib.rs"

[[bin]]
name = "svccat"
path = "src/main.rs"

[dependencies]
anyhow      = "1"
clap        = { version = "4", features = ["derive"] }
clap_complete = "4"
colored     = "2"
glob        = "0.3"
notify      = "6"
regex       = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
# serde_yaml (dtolnay) is deprecated/unmaintained; serde_yaml_ng is the
# maintained drop-in fork. Renamed to `serde_yaml` so call sites are unchanged.
serde_yaml  = { package = "serde_yaml_ng", version = "0.10" }
toml        = "0.8"
ureq        = "2"
url         = "2"

[dev-dependencies]
clap_complete = "4"
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "large_manifest_benchmark"
harness = false
